Updates SEDAP-Express (Docu & Framework, Enums)